--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,13 @@ a:visited {
   display: block;
   height: 400px;
 }
+#brandon-wirz-cover {
+    background-image: url("http://imgur.com/Ss58pt1.jpg");
+}
+
+#brandon-wirz-card {
+    background-image: url("http://imgur.com/PwD69GB.jpg");
+}
 #aly-alidina-cover {
     background-image: url("http://imgur.com/ucFtuBt.jpg");
 }
@@ -139,7 +146,6 @@ a:visited {
 #aly-alidina-card {
     background-image: url("http://imgur.com/zLQFVKP.jpg");
 }
-
 
 #irina-afanaseva-cover {
     background-image: url("http://i.imgur.com/0mb6WMf.jpg");
@@ -486,7 +492,7 @@ a:visited {
 #emily-sugano-cover {
     background-image: url("http://i.imgur.com/HYFTqwa.jpg");
 }
- 
+
 #emily-sugano-card {
     background-image: url("http://i.imgur.com/QZl4wU0.jpg");
 }
@@ -5016,7 +5022,7 @@ a:visited {
 #julia-thompson-cover {
     background-image: url("http://i.imgur.com/95AcWIm.jpg");
   }
- 
+
 #julia-thompson-card {
     background-image: url("http://i.imgur.com/wIKLtDr.jpg");
 }
